# Shashi_Bhushan_Jha_flytbase_assignment

./: .gitignore  README.md  pyrightconfig.json  pytest.ini  run_all_versions.sh  run_live_webapps.sh
v1.0/: README.md
v1.0/docs/: reflection.md
v1.0/src/: deconfliction.py  models.py  scenarios.py  visualization.py
v1.0/src/plots/: conflict_case.html  conflict_case_3d.html  conflict_case_4d.html  conflict_free_case.html  conflict_free_case_3d.html  conflict_free_case_4d.html  time_shifted_crossing.html  time_shifted_crossing_3d.html  time_shifted_crossing_4d.html  timed_waypoint_case.html  timed_waypoint_case_3d.html  timed_waypoint_case_4d.html
v1.0/tests/: test_deconfliction.py
v1.1/: README.md  requirements.txt
v1.1/docs/: reflection.md
v1.1/src/: models.py  scenarios.py  solver.py  trajectory.py  visualization.py
v1.1/src/plots/: crossing_conflict.html  crossing_conflict_3d.html  (+7 more)
v1.1/tests/: test_continuous_solver.py
v2.0/: README.md  app.py  pyproject.toml  requirements.txt  sitecustomize.py
v2.0/docs/: reflection.md
v2.0/docs/plots/: atc_conflict_overview_3d.html  atc_dense_replay_4d.html
v2.0/frontend/: index.html  package-lock.json  package.json  tsconfig.json
v2.0/frontend/src/: App.tsx  styles.css
v2.0/scripts/: benchmark_load.py  generate_visuals.py
v2.0/server/: main.py
v2.0/src/flytbase_atc/: __init__.py  dashboard.py  deconfliction.py  geometry.py  models.py  performance.py  scenarios.py  simulator.py
v2.0/src/flytbase_atc_deconfliction.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
v2.0/tests/: test_deconfliction.py
