[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flytbase-atc-deconfliction"
version = "0.1.0"
description = "Real-time UAV strategic deconfliction and ATC dashboard"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
